samples/_failures_safe/1761393508_49cb76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bf832a9.c: In function ‘display_stats’:
./samples/SAFE/__tmp_9bf832a9.c:149:5: error: expected declaration or statement at end of input
  149 |     printf("Errors: %u\n", analyzer->stats.error_count);
      |     ^~~~~~
